crates/sui-prover/tests/snapshots/mut_ref_enum/mut_ref_enum_nested_enum_in_struct.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 126
expression: output
---
Verification successful
warning: Spec function signature have differ params name than underlying func
   ┌─ tests/inputs/mut_ref_enum/mut_ref_enum_nested_enum_in_struct.move:31:1
   │  
31 │ ╭ fun reset_to_low_spec(cn: &mut ColorStruct) {
32 │ │     reset_to_low(cn);
33 │ │     ensures(
34 │ │         cn.inner ==
   · │
37 │ │     ensures(cn.val == 1);
38 │ │ }
   │ ╰─^
